sync highlight_windows effect to tabbox usage

BUG: 270498
REVIEW: 103349